--- a/ConfigruleCMFA.yaml
+++ b/ConfigruleCMFA.yaml
@@ -33,50 +33,50 @@ dns:
     - 112.215.203.254
 proxies:
   - name: AKUN1
-    server: quiz.int.vidio.com
-    port: 80
+    server: support.zoom.us
+    port: 443
     type: vmess
-    uuid: 396415b0-6f7d-4df3-9d50-1a3ff9115b1a
+    uuid: fda8516a-d07c-4d3e-b3eb-2ed4cca3c830
     alterId: 0
     cipher: auto
-    tls: false
+    tls: true
     skip-cert-verify: true
-    servername: id2-ray.ipservers.xyz
+    servername: wjy3.stbserver.xyz
     network: ws
     ws-opts:
-      path: /JAGOANSSH/
+      path: /vmess
       headers:
-        Host: id2-ray.ipservers.xyz
+        Host: wjy3.stbserver.xyz
     udp: true
   - name: AKUN2
-    server: quiz.int.vidio.com
+    server: gomarketplacecontent-cf.zoom.us
     port: 443
-    type: vless
-    uuid: 9cf9a9b0-2e2e-45bd-ac6f-5eaa44e30cfe
+    type: vmess
+    uuid: fda8516a-d07c-4d3e-b3eb-2ed4cca3c830
     cipher: auto
     tls: true
     skip-cert-verify: true
-    servername: id1vless.ipservers.xyz
+    servername: wjy3.stbserver.xyz
     network: ws
     ws-opts:
-      path: /jagoanssh
+      path: /vmess
       headers:
-        Host: id1vless.ipservers.xyz
+        Host: wjy3.stbserver.xyz
     udp: true
   - name: AKUN3
-    server: quiz.int.vidio.com
+    server: gomarketplacefront-cf.zoom.us
     port: 443
-    type: vless
-    uuid: aae98731-898a-4cd3-8c7f-d09af2387d63
+    type: vmess
+    uuid: fda8516a-d07c-4d3e-b3eb-2ed4cca3c830
     cipher: auto
     tls: true
     skip-cert-verify: true
-    servername: id2vless.ipservers.xyz
+    servername: wjy3.stbserver.xyz
     network: ws
     ws-opts:
-      path: /jagoanssh
+      path: /vmess
       headers:
-        Host: id2vless.ipservers.xyz
+        Host: wjy3.stbserver.xyz
     udp: true
 
 proxy-groups:
